<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_app_intro">Welcome To AppIntro</string>
    <string name="welcome_screen_description">You think you know what Scary is? That\'s going to change with a click of a button</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
</resources>
