<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_app_intro"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:contentDescription="ghost icon"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/ghost"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:text="@string/welcome_screen_description"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@android:color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/menu_dot_left"
            android:layout_width="@dimen/menu_dot_size"
            android:layout_height="@dimen/menu_dot_size"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/menu_dot_center"
            android:layout_toLeftOf="@+id/menu_dot_center"
            android:contentDescription="menu dots"
            android:tint="@android:color/holo_orange_light"
            app:srcCompat="@drawable/menu_dots_24dp"
            tools:ignore="HardcodedText,VectorDrawableCompat" />

        <ImageView
            android:id="@+id/menu_dot_center"
            android:layout_width="@dimen/menu_dot_size"
            android:layout_height="@dimen/menu_dot_size"
            android:layout_centerInParent="true"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="7dp"
            android:contentDescription="menu dots"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/menu_dots_24dp"
            tools:ignore="HardcodedText,VectorDrawableCompat" />

        <ImageView
            android:id="@+id/menu_dot_right"
            android:layout_width="@dimen/menu_dot_size"
            android:layout_height="@dimen/menu_dot_size"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/menu_dot_center"
            android:layout_toRightOf="@+id/menu_dot_center"
            android:contentDescription="menu dots"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/menu_dots_24dp"
            tools:ignore="HardcodedText,VectorDrawableCompat" />

        <TextView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/next"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

</LinearLayout>

